--- a/checkpoint2/css/style.css
+++ b/checkpoint2/css/style.css
@@ -4,7 +4,7 @@ body{
 }
 
 .img-container{
-background: url(../images/cupsandleaves.jpg) no-repeat center center fixed;
+background: url(../img/pizza1.jpg) no-repeat center center fixed;
   height: 700px;
   background-size: cover;
   justify-content: center;
