--- a/checkpoint2/css/style.css
+++ b/checkpoint2/css/style.css
@@ -3,17 +3,17 @@ body{
   background: transparent;
 }
 
+*{
+  margin: 0;
+  padding-left: 0;
+}
+
 .img-container{
-background: url(../img/pizza1.jpg) no-repeat center center fixed;
+background: url(../img/cupsandleaves.jpg) no-repeat center center fixed;
   height: 700px;
   background-size: cover;
   justify-content: center;
   display: flex;
-}
-
-*{
-  margin: 0;
-  padding-left: 0;
 }
 
 .logo {
@@ -57,7 +57,7 @@ nav {
     text-decoration: line-through;
   }
 
-  .front-page-logo {
+  /* .front-page-logo {
   font-family: 'Dancing Script', cursive;
   position: absolute;
   display: flex;
@@ -66,10 +66,10 @@ nav {
   color: white;
   font-size: 65px;
   padding-bottom: 50px;
- }
+ } */
 
- .front-page {
- font-family: 'Montserrat', sans-serif;
+ /* .front-page { */
+ /* font-family: 'Montserrat', sans-serif;
  position: absolute;
  display: flex;
  align-self: flex-end;
@@ -78,14 +78,44 @@ nav {
  font-size: 20px;
  font-style: oblique;
  padding-bottom: 20px;
+} */
+
+.row1{
+  display: grid;
+  grid-template-columns: 30% 70%;
+  grid-template-rows: minmax(350px, auto);
+  grid-template-areas:
+  "catering values";
+}
+
+.catering{
+  grid-area: catering;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #417523;
+  margin: 0;
+  justify-content: center;
+  text-align: justify;
+  padding: 5px;
+  padding-top: 20px;
+  border: 0 solid white;
+  border-top-width: 2px;
+}
+
+.catering-button{
+    width: 75px;
+    height: 25px;
+    display: flex;
+    background-color: black;
+    color:white;
+    text-align: center;
+    align-items: center;
+    padding: 5px;
 }
 
 .values{
+  grid-area: values;
   font-family: 'Montserrat', sans-serif;
-  width:auto;
-  height:400px;
   background-color: #00000c;
-  display: block;
   margin: 0 auto;
   justify-content: space-around;
   text-align: justify;
@@ -93,6 +123,7 @@ nav {
   padding-top: 20px;
   border: 0 solid white;
   border-top-width: 2px;
+
 }
 
 .section1 h1{
@@ -157,7 +188,7 @@ font-size: 60px;
   padding: 5px;
 }
 
-.wrapper2 {
+/* .wrapper2 {
   display:flex;
   text-align: center;
   flex-direction: column;
@@ -175,18 +206,44 @@ font-size: 60px;
   align-self: center;
   margin: auto;
   padding: 5px;
-}
+} */
 
 footer{
+  grid-area: footer;
   background-color: #00000c;
   height:75px;
 }
 
 .footer p{
-  font-family: 'Montserrat', sans-serif;
+font-family: 'Montserrat', sans-serif;
 color: #fff;
 justify-content: center;
 align-self: baseline;
 display: flex;
 padding-top: 20px;
 }
+
+
+@media (min-width: 375px) and (max-width: 675px){
+  main {
+    display: block;
+  }
+  nav{
+    height: 150px;
+  }
+
+  .row1{
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: minmax(350px, auto);
+  grid-template-areas:
+  "row1"
+  "section"
+  "footer";
+  }
+}
+
+/* @media (min-width: 375px) and (max-width: 925px){
+  article{
+    width: 100%;
+  } */
