--- a/checkpoint2/css/style.css
+++ b/checkpoint2/css/style.css
@@ -224,22 +224,23 @@ padding-top: 20px;
 }
 
 
-@media (min-width: 375px) and (max-width: 675px){
+
+/*MOBILE MEDIA QUERY*/
+@media (min-width: 375px) and (max-width: 768px){
   main {
-    display: block;
+    display: grid;
   }
+
+  body{
+    width: 100%;
+  }
+
   nav{
     height: 150px;
   }
 
-  .row1{
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: minmax(350px, auto);
-  grid-template-areas:
-  "row1"
-  "section"
-  "footer";
+  footer{
+    display: none;
   }
 }
 
